kubernetes/TOOLS/keda/installation_and_config/manifests/NetworkPolicies/np-allow-ns-internal-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ns-internal-traffic
  namespace: keda
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: keda
