kubernetes/TOOLS/keda/installation_and_config/manifests/NetworkPolicies/np-allow-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhook-access-from-any
  namespace: keda
spec:
  podSelector:
    # same selector as keda-admission-webhooks Service
    matchLabels:
      app: keda-admission-webhooks
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 9443  # https port (has to be container port)
